--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     <body>
         <div id="loginPage" class="doodleBackground">
             <div class="loginCard">
-                <div>Choose your username:</div>
+                <div>choose your username</div>
                 <input id="usernameInput" type="text" placeholder="username">
-                <div class="hint">click enter to start!</div>
+                <div class="hint">click enter to start</div>
+            </div>
+        </div>
+        <div id="avatarPickerPage" class="doodleBackground">
+            <div class="avatarsCard">
+                <div class="description">choose your profile picture</div>
+                <div class="avatars">
+                    
+                </div>
             </div>
         </div>
         <div id="chatPage">
@@ -27,6 +35,7 @@
                     <input type="text">
                 </div>
                 <div id="chatsList">
+                   
                 </div>
             </div>
             <div class="chatPane breakpoint-lg">
@@ -49,8 +58,10 @@
                     </div>
                 </div>
             </div>
+            <div id="newGroupButton">new room</div>
         </div>
     </body>
 
+    <script src="sillyClient.js"></script>
     <script src="index.js" type="module"></script>
 </html>
