--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="loginCard">
                 <div>choose your username</div>
                 <input id="usernameInput" type="text" placeholder="username">
-                <div class="hint">click enter to start</div>
+                <div class="hint">press enter to start</div>
             </div>
         </div>
         <div id="avatarPickerPage" class="doodleBackground">
@@ -21,6 +21,13 @@
                 <div class="avatars">
                     
                 </div>
+            </div>
+        </div>
+        <div id="newRoomPage" class="doodleBackground">
+            <div class="newRoomCard">
+                <div>create a new room or join an existing private room</div>
+                <input id="newRoomInput" type="text" placeholder="room name">
+                <div class="hint">press enter to continue</div>
             </div>
         </div>
         <div id="chatPage">
@@ -56,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div id="newGroupButton">new room</div>
+            <div id="newRoomButton">new room</div>
         </div>
     </body>
 
