--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="chatListsPane">
                 <div class="appBar toolbar">
                     <div class="profilePicture">
-                        <img class="avatar" src="public/avatars/default-avatar.jpg" alt="avatar1 profile picture">
+                        <img class="avatar" src="public/default-avatar.jpg" alt="avatar1 profile picture">
                     </div>
-                    <div class="displayName">
+                    <div class="username">
                     </div>
                 </div>
                 <div id="searchbar">
@@ -49,9 +49,9 @@
             <div class="chatPane breakpoint-lg">
                 <div class="header appBar shadow-bottom" >
                     <div class="profilePicture">
-                        <img class="avatar" src="public/avatars/default-avatar.jpg" alt="avatar1 profile picture">
+                        <img class="avatar" src="public/default-avatar.jpg" alt="avatar1 profile picture">
                     </div>
-                    <div class="displayName">
+                    <div class="username">
                     </div>
                 </div>
                 <div class="messages doodleBackground" >
